<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TITFL</string>
    <string name="action_run">Run</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="test">Test</string>
    <string name="blank_string"></string>
    <string name="dummy_string">dummy</string>
    <string name="change_my_mind">Change My Mind</string>
    <string name="purchase">Purchase</string>
    <string name="quantity">Quantity</string>
    <string name="buttonReset">Reset</string>
    <string name="add_1">+1</string>
    <string name="add_10">+10</string>
    <string name="add_100">+100</string>
    <string name="close">Close</string>
    <string name="my_courses">My Courses</string>
    <string name="all_courses">All Courses</string>
    <string name="work">Work</string>
    <string name="relax">Relax</string>
    <string name="socialize">Socialize</string>
    <string name="exercise">Exercise</string>
    <string name="apply_job">Apply Job</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="amount">Amount $.</string>    
    <string name="volume">Volume</string>
    <string name="leftPlayer">Player left, Town right</string>
    <string name="leftTown">Town left, Player right</string>
    <string name="exitTITFL">Exit TITFL</string>
    <string name="backToGame">Back to Game</string>
    <string name="mainMenu">Main Menu</string>
    <string name="beg">Beg</string>
	<string name="loan_payment">Loan Payment</string>
	<string name="invest_buy">Invest - Buy</string>
	<string name="invest_sell">Invest - Sell</string>
	<string name="payment">Payment $</string>
	<string name="pay">Pay</string>
	<string name="qualification">Qualification:</string>		
	<string name="garage">Garage</string>
	<string name="closet">Closet</string>
	<string name="clear">Clear</string>
	<string name="history">History</string>
	<string name="wealth">Wealth</string>
	<string name="career">Career</string>
	<string name="education">Education</string>
	<string name="leisure">Leisure</string>
	<string name="health">Health</string>
	<string name="happiness">Happiness</string>
	<string name="cash">Cash</string>
	<string name="home">Home</string>
	<string name="balance">Current Balance $.</string>
	<string name="add_20usd">+$20</string>
	<string name="add_100usd">+$100</string>
	<string name="add_1000usd">+$1,000</string>
	<string name="amount_deposit">Amount to Deposit $.</string>    
</resources>
