<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.noetap.titfl.TITFLPlayerView
        android:id="@+id/playerView"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/buttonClose"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/playerView"
        android:text="@string/close" />

    <Button
        android:id="@+id/buttonWork"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/buttonClose"
        android:text="@string/work" />

    <Button
        android:id="@+id/buttonApply"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonWork"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/buttonWork"
        android:text="@string/apply_job" />
    
    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/dummy_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageViewGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewName"
        android:contentDescription="@string/blank_string"
        android:src="@drawable/marble" />

    <TextView
        android:id="@+id/textViewGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonClose"
        android:layout_toRightOf="@+id/imageViewGreeting"
        android:text="@string/dummy_string"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <LinearLayout
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/playerView"
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/imageViewGreeting"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
		    <Button
		        android:id="@+id/buttonDeposit"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/deposit" />
		    <Button
		        android:id="@+id/buttonWithdraw"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/withdraw" />
            <ListView
		        android:id="@+id/listViewLoans"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent" >
		    </ListView>
		</LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/buy"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
            <ListView
		        android:id="@+id/listViewBuyable"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent" >
		    </ListView>
		</LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/sell"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		        
		    <ListView
		        android:id="@+id/listViewSellable"
		        android:layout_width="wrap_content"
		        android:layout_height="match_parent" >		
		    </ListView>
		</LinearLayout>
	</LinearLayout>

</RelativeLayout>