<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<RelativeLayout
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:layout_marginTop="10dp"
		android:layout_gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" >
        <TextView
        	android:id="@+id/textViewBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textViewSaving"
            android:text="@string/balance"
            android:layout_alignRight="@+id/textViewQuantity"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/textViewSaving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextQuantity"
            android:layout_marginLeft="10dp"
            android:text="@string/dummy_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
        	android:id="@+id/textViewQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextQuantity"
            android:layout_below="@+id/textViewBalance"
            android:text="@string/amount_deposit"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/editTextQuantity"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewSaving"
            android:layout_toRightOf="@+id/textViewQuantity"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="28sp" />
	</RelativeLayout>
    <LinearLayout
		android:id="@+id/buttonBarQuantity"
	    style="?android:attr/buttonBarStyle"
	    android:divider="?android:attr/dividerVertical"
	    android:showDividers="middle"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
	    android:layout_marginBottom="20dp"
	    android:background="@drawable/bg_babyblue"
	    android:layout_width="match_parent"
	    android:layout_height="40dp" >   
	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/buttonReset"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/buttonReset" />
	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/buttonAdd20"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/add_20usd" />
	    <Button
	        style="?android:attr/buttonBarButtonStyle"
	        android:id="@+id/buttonAdd100"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/add_100usd" />
	    <Button
	         style="?android:attr/buttonBarButtonStyle"
	         android:id="@+id/buttonAdd1000"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_weight="1"
 	         android:text="@string/add_1000usd" />
	</LinearLayout>
         
    <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:divider="?android:attr/dividerVertical"
         android:showDividers="middle"
         android:background="@drawable/bg_babyblue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >   
         <Button
              style="?android:attr/buttonBarButtonStyle"
              android:id="@+id/buttonCancel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/change_my_mind" />
         <Button
              style="?android:attr/buttonBarButtonStyle"
              android:id="@+id/buttonOK"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/dummy_string" />
     </LinearLayout>
 </LinearLayout>
        