<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/listViewLoans"
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:choiceMode="singleChoice"
            android:listSelector="@drawable/bg_blue" >
        </ListView>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_string"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal" >
                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_string"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
                <TextView
                    android:id="@+id/textViewQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/quantity"
                    android:gravity="right"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
                <EditText
                    android:id="@+id/editTextQuantity"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
			</LinearLayout>
		    <LinearLayout
		         android:id="@+id/buttonBarQuantity"
		         style="?android:attr/buttonBarStyle"
		         android:divider="?android:attr/dividerVertical"
		         android:showDividers="middle"
		         android:background="@drawable/bg_babyblue"
		         android:layout_width="match_parent"
		         android:layout_height="40dp" >   
		         <Button
		              style="?android:attr/buttonBarButtonStyle"
		              android:id="@+id/buttonReset"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:layout_weight="1"
		              android:text="@string/buttonReset" />
		         <Button
		              style="?android:attr/buttonBarButtonStyle"
		              android:id="@+id/buttonAdd1"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:layout_weight="1"
		              android:text="@string/add_1" />
		         <Button
		              style="?android:attr/buttonBarButtonStyle"
		              android:id="@+id/buttonAdd10"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:layout_weight="1"
		              android:text="@string/add_10" />
		         <Button
		              style="?android:attr/buttonBarButtonStyle"
		              android:id="@+id/buttonAdd100"
		              android:layout_width="wrap_content"
		              android:layout_height="wrap_content"
		              android:layout_weight="1"
		              android:text="@string/add_100" />
		    </LinearLayout>
            <ImageView
                android:id="@+id/imageViewGoods"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/blank_string"
                android:src="@drawable/goods_sample" />
		</LinearLayout>
	</LinearLayout>
         
    <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:divider="?android:attr/dividerVertical"
         android:showDividers="middle"
         android:background="@drawable/bg_babyblue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >   
         <Button
              style="?android:attr/buttonBarButtonStyle"
              android:id="@+id/buttonCancel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/change_my_mind" />
         <Button
              style="?android:attr/buttonBarButtonStyle"
              android:id="@+id/buttonOK"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/buy" />
     </LinearLayout>
 </LinearLayout>
 