<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewVolume"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/volume" />

            <SeekBar
                android:id="@+id/seekBarVolume"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1" />
        </LinearLayout>

	  	<RadioGroup
	  	android:id="@+id/radioLayout"
	  	android:layout_width="wrap_content"
	  	android:layout_height="wrap_content" >
        <RadioButton
            android:id="@+id/radioButtonAvatarLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:text="@string/leftPlayer" />

        <RadioButton
            android:id="@+id/radioButtonAvatarRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_weight="1"
            android:text="@string/leftTown" />
        </RadioGroup>
     </LinearLayout>
         
     <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:divider="?android:attr/dividerVertical"
         android:showDividers="middle"
         android:background="@drawable/bg_babyblue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:layout_marginTop="10dp">   
         <Button
              style="?android:attr/buttonBarButtonStyle"
              android:id="@+id/buttonExit"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/exitTITFL" />
         <Button
              style="?android:attr/buttonBarButtonStyle"
              android:id="@+id/buttonMainMenu"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/mainMenu" />
         <Button
              style="?android:attr/buttonBarButtonStyle"
              android:id="@+id/buttonClose"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/backToGame" />
     </LinearLayout>
 </LinearLayout>
        